# src/routes/index.ts
@@ -1,29 +1,28 @@
 import express from "express";
-import apicache from "apicache";
-import PingController from "../controllers/categories.controller";
 import swaggerUi from "swagger-ui-express";
 import CategoriesController from "../controllers/categories.controller";
 import UserRouter from "./user.router";
 import LanguagesController from "../controllers/languages.controller";
 
 const router = express.Router();
-const cache = apicache.options({ debug: true }).middleware;
 
-router.get("/ping", async (_req, res) => {
-  const pingController = new PingController();
-  const response = await pingController.getMessage();
-  return res.send(response);
-});
-
-router.get("/languages", cache("1 month"), async (_req, res) => {
+router.get("/languages", async (_req, res) => {
   const controller = new LanguagesController();
-  const response = await controller.getMessage();
+  const response = await controller.getLanguages();
+  res.set(
+    "Cache-Control",
+    "public, max-age=300, s-maxage=300, stale-while-revalidate=60, stale-if-error=60"
+  );
   return res.send(response);
 });
 
-router.get("/categories", cache("1 month"), async (_req, res) => {
+router.get("/categories", async (_req, res) => {
   const controller = new CategoriesController();
-  const response = await controller.getMessage();
+  const response = await controller.getCategories();
+  res.set(
+    "Cache-Control",
+    "public, max-age=300, s-maxage=300, stale-while-revalidate=60, stale-if-error=60"
+  );
   return res.send(response);
 });
 
